5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1758_1189.log
== TEST (2019-05-28 12:45:34) 
-- CODE:
a = str(input('fala meu bom: ')).replace(' ')
print(a.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = str(input()).replace(' ')
TypeError: replace() takes at least 2 arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:46:13) 
-- CODE:
a = str(input('fala meu bom: ')).replace()
print(a.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = str(input()).replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:05) 
-- CODE:
a = str(input('fala meu bom: '))
print(replace(a.upper()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(replace(a.upper()))
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:42) 
-- CODE:
a = str(input('fala meu bom: '))
print(a.upper().replace())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(a.upper().replace())
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:28) 
-- CODE:
a = str(input('fala meu bom: '))
print(a.replace(' '))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(a.replace(' '))
TypeError: replace() takes at least 2 arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:00) 
-- CODE:
a = str(input('fala meu bom: '))
print(replace(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(replace(a))
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:31) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(replace(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:49) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:40) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:31) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		print(0)
if i == l(a)-1 and (j == -len(a)) and (a[i]==a[j])
-- ERROR:
File "XXXX", line 12
    if i == l(a)-1 and (j == -len(a)) and (a[i]==a[j])
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:42) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		print(0)
if i == l(a)-1 and (j == -len(a)) and (a[i]==a[j]):
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:59:49) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		i +=1
if i == l(a)-1 and (j == -len(a)) and (a[i]==a[j]):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:00:16) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		i +=1
if i == len(a)-1 and (j == -len(a)) and (a[i]==a[j]):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:00:53) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		i +=1
if i == len(a) and (j == -len(a)) and (a[i]==a[j]):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:01:17) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		i +=1
if i == len(a) and (j == -len(a)+1) and (a[i]==a[j]):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:05:22) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		i = 10
if i == 10:
	print(0)
else:
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:06:21) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j -= 1
	else:
		i = -90
if i == -90:
	print(0)
else:
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:08:34) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j += -1
	else:
		print(0)
		i = len(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:10:24) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j += -1
	else:
		print(0)
		i = len(a)+1
if i == len(a):
	print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:10:41) 
-- CODE:
from numpy import *
a = str(input('fala meu bom: '))
print(a.replace(' ', '').upper())
i = 0
j = -1
while i < len(a):
	if a[i] == a[j]:
		i += 1
		j += -1
	else:
		print(0)
		i = len(a)+1
if i == len(a):
	print(1)
-- EXECUTION TIME:
0.360994
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
